dartagnan/src/test/resources/spirv/opencl/gpuverify/sourcelocation_tests/races/fail/read_write.spvasm
; @Config: 9, 1, 1
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 30
; Schema: 0
               OpCapability Addresses
               OpCapability Linkage
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %9 "foo" %__spirv_BuiltInLocalInvocationId
               OpSource OpenCL_C 200000
               OpName %__spirv_BuiltInLocalInvocationId "__spirv_BuiltInLocalInvocationId"
               OpDecorate %__spirv_BuiltInLocalInvocationId BuiltIn LocalInvocationId
               OpDecorate %__spirv_BuiltInLocalInvocationId Constant
               OpDecorate %__spirv_BuiltInLocalInvocationId LinkageAttributes "__spirv_BuiltInLocalInvocationId" Import
               OpDecorate %14 Alignment 4
               OpDecorate %15 Alignment 4
       %uint = OpTypeInt 32 0
     %uint_8 = OpConstant %uint 8
     %v3uint = OpTypeVector %uint 3
%_ptr_Input_v3uint = OpTypePointer Input %v3uint
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %8 = OpTypeFunction %void %_ptr_Workgroup_uint %_ptr_Workgroup_uint
%_ptr_Function__ptr_Workgroup_uint = OpTypePointer Function %_ptr_Workgroup_uint
%__spirv_BuiltInLocalInvocationId = OpVariable %_ptr_Input_v3uint Input
          %9 = OpFunction %void DontInline %8
         %10 = OpFunctionParameter %_ptr_Workgroup_uint
         %11 = OpFunctionParameter %_ptr_Workgroup_uint
         %12 = OpLabel
         %14 = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
         %15 = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
               OpStore %14 %10 Aligned 4
               OpStore %15 %11 Aligned 4
         %16 = OpLoad %_ptr_Workgroup_uint %14 Aligned 4
         %18 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %16 %uint_8
         %19 = OpLoad %uint %18 Aligned 4
         %20 = OpLoad %_ptr_Workgroup_uint %15 Aligned 4
         %21 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
         %22 = OpCompositeExtract %uint %21 0
         %23 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %20 %22
               OpStore %23 %19 Aligned 4
         %24 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
         %25 = OpCompositeExtract %uint %24 0
         %26 = OpLoad %_ptr_Workgroup_uint %14 Aligned 4
         %27 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
         %28 = OpCompositeExtract %uint %27 0
         %29 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %26 %28
               OpStore %29 %25 Aligned 4
               OpReturn
               OpFunctionEnd
